Make Kexi query parameters also work in COLUMNS section

Summary:
Kexi query parameters do not work in COLUMNS section,
e.g. this won't work ('invalid query' error appears):
SELECT [Param]

The parameters work only in the WHERE section,
e.g. SELECT 123 WHERE [Param] = 1

BUG:348473

Test Plan: Test the query in the attached db https://bugs.kde.org/show_bug.cgi?id=348473#c1

Reviewers: piggz, wicik, wkosowicz

Subscribers: Kexi-Devel-list

Projects: #kexi, #calligra:_3.0

Differential Revision: https://phabricator.kde.org/D890